# MyChat

./: .gitignore  CMakeLists.txt  common.h
client/: client.cpp  client.h
server/: server.cpp  server.h  serverDatabase.cpp  serverDatabase.h
socket/: ChatSocketTest  ChatSocketTest.cpp  TcpChatSocket.cpp  TcpChatSocket.h
